minidecaf/generated/MiniDecafParser.py
# Generated from MiniDecaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniDecafParser ( Parser ):

    grammarFileName = "MiniDecaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'break'", "'continue'", "'['", "']'", "'?'", 
                     "':'", "'int'", "'return'", "'('", "')'", "'{'", "'}'", 
                     "';'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'~'", "'&'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'='", "'&&'", "'||'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Int", "Return", "Lparen", "Rparen", 
                      "Lbrace", "Rbrace", "Semicolon", "Punctuator", "Plus", 
                      "Minus", "Asterisk", "Slash", "Percent", "Exclamation", 
                      "Tilde", "Ampersand", "Langle", "Rangle", "Langle_eq", 
                      "Rangle_eq", "Double_eq", "Exclam_eq", "Equal", "Double_amp", 
                      "Double_bar", "Operator", "Integer", "Whitespace", 
                      "Ident" ]

    RULE_prog = 0
    RULE_externalDecl = 1
    RULE_func = 2
    RULE_paramList = 3
    RULE_ty = 4
    RULE_stmt = 5
    RULE_decl = 6
    RULE_blockItem = 7
    RULE_block = 8
    RULE_expr = 9
    RULE_asgn = 10
    RULE_cond = 11
    RULE_lor = 12
    RULE_land = 13
    RULE_eq = 14
    RULE_rel = 15
    RULE_add = 16
    RULE_mul = 17
    RULE_unary = 18
    RULE_cast = 19
    RULE_postfix = 20
    RULE_argList = 21
    RULE_atom = 22
    RULE_unaryOp = 23
    RULE_addOp = 24
    RULE_mulOp = 25
    RULE_relOp = 26
    RULE_eqOp = 27
    RULE_asgnOp = 28

    ruleNames =  [ "prog", "externalDecl", "func", "paramList", "ty", "stmt", 
                   "decl", "blockItem", "block", "expr", "asgn", "cond", 
                   "lor", "land", "eq", "rel", "add", "mul", "unary", "cast", 
                   "postfix", "argList", "atom", "unaryOp", "addOp", "mulOp", 
                   "relOp", "eqOp", "asgnOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    Int=13
    Return=14
    Lparen=15
    Rparen=16
    Lbrace=17
    Rbrace=18
    Semicolon=19
    Punctuator=20
    Plus=21
    Minus=22
    Asterisk=23
    Slash=24
    Percent=25
    Exclamation=26
    Tilde=27
    Ampersand=28
    Langle=29
    Rangle=30
    Langle_eq=31
    Rangle_eq=32
    Double_eq=33
    Exclam_eq=34
    Equal=35
    Double_amp=36
    Double_bar=37
    Operator=38
    Integer=39
    Whitespace=40
    Ident=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniDecafParser.EOF, 0)

        def externalDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExternalDeclContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExternalDeclContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = MiniDecafParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.externalDecl()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MiniDecafParser.Int):
                    break

            self.state = 63
            self.match(MiniDecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExternalDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_externalDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclExternalDeclContext(ExternalDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.ExternalDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def decl(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclContext,0)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclExternalDecl" ):
                listener.enterDeclExternalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclExternalDecl" ):
                listener.exitDeclExternalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclExternalDecl" ):
                return visitor.visitDeclExternalDecl(self)
            else:
                return visitor.visitChildren(self)


    class FuncExternalDeclContext(ExternalDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.ExternalDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func(self):
            return self.getTypedRuleContext(MiniDecafParser.FuncContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncExternalDecl" ):
                listener.enterFuncExternalDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncExternalDecl" ):
                listener.exitFuncExternalDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncExternalDecl" ):
                return visitor.visitFuncExternalDecl(self)
            else:
                return visitor.visitChildren(self)



    def externalDecl(self):

        localctx = MiniDecafParser.ExternalDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_externalDecl)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.FuncExternalDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.func()
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.DeclExternalDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.decl()
                self.state = 67
                self.match(MiniDecafParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_func

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDeclContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)

        def Ident(self):
            return self.getToken(MiniDecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def paramList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParamListContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)


    class FuncDefContext(FuncContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.FuncContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)

        def Ident(self):
            return self.getToken(MiniDecafParser.Ident, 0)
        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def paramList(self):
            return self.getTypedRuleContext(MiniDecafParser.ParamListContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def block(self):
            return self.getTypedRuleContext(MiniDecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDef" ):
                listener.enterFuncDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDef" ):
                listener.exitFuncDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def func(self):

        localctx = MiniDecafParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.FuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.ty(0)
                self.state = 72
                self.match(MiniDecafParser.Ident)
                self.state = 73
                self.match(MiniDecafParser.Lparen)
                self.state = 74
                self.paramList()
                self.state = 75
                self.match(MiniDecafParser.Rparen)
                self.state = 76
                self.block()
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.FuncDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.ty(0)
                self.state = 79
                self.match(MiniDecafParser.Ident)
                self.state = 80
                self.match(MiniDecafParser.Lparen)
                self.state = 81
                self.paramList()
                self.state = 82
                self.match(MiniDecafParser.Rparen)
                self.state = 83
                self.match(MiniDecafParser.Semicolon)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniDecafParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = MiniDecafParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniDecafParser.Int:
                self.state = 87
                self.decl()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniDecafParser.T__0:
                    self.state = 88
                    self.match(MiniDecafParser.T__0)
                    self.state = 89
                    self.decl()
                    self.state = 94
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_ty

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class PtrTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ty(self):
            return self.getTypedRuleContext(MiniDecafParser.TyContext,0)

        def Asterisk(self):
            return self.getToken(MiniDecafParser.Asterisk, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPtrType" ):
                listener.enterPtrType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPtrType" ):
                listener.exitPtrType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPtrType" ):
                return visitor.visitPtrType(self)
            else:
                return visitor.visitChildren(self)


    class IntTypeContext(TyContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.TyContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Int(self):
            return self.getToken(MiniDecafParser.Int, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntType" ):
                listener.enterIntType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntType" ):
                listener.exitIntType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntType" ):
                return visitor.visitIntType(self)
            else:
                return visitor.visitChildren(self)



    def ty(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniDecafParser.TyContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_ty, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            localctx = MiniDecafParser.IntTypeContext(self, localctx)
            self._ctx = localctx
            _prevctx = localctx

            self.state = 98
            self.match(MiniDecafParser.Int)
            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniDecafParser.PtrTypeContext(self, MiniDecafParser.TyContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_ty)
                    self.state = 100
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 101
                    self.match(MiniDecafParser.Asterisk) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniDecafParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NullStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullStmt" ):
                listener.enterNullStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullStmt" ):
                listener.exitNullStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullStmt" ):
                return visitor.visitNullStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.init = None # ExprContext
            self.ctrl = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(MiniDecafParser.Semicolon)
            else:
                return self.getToken(MiniDecafParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.th = None # StmtContext
            self.el = None # StmtContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.StmtContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.StmtContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForDeclStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.init = None # DeclContext
            self.ctrl = None # ExprContext
            self.post = None # ExprContext
            self.copyFrom(ctx)

        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def Semicolon(self, i:int=None):
            if i is None:
                return self.getTokens(MiniDecafParser.Semicolon)
            else:
                return self.getToken(MiniDecafParser.Semicolon, i)
        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def decl(self):
            return self.getTypedRuleContext(MiniDecafParser.DeclContext,0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniDecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(MiniDecafParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForDeclStmt" ):
                listener.enterForDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForDeclStmt" ):
                listener.exitForDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForDeclStmt" ):
                return visitor.visitForDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class DoWhileStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def stmt(self):
            return self.getTypedRuleContext(MiniDecafParser.StmtContext,0)

        def Lparen(self):
            return self.getToken(MiniDecafParser.Lparen, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def Rparen(self):
            return self.getToken(MiniDecafParser.Rparen, 0)
        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStmt" ):
                listener.enterDoWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStmt" ):
                listener.exitDoWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDoWhileStmt" ):
                return visitor.visitDoWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(MiniDecafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class BreakStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(MiniDecafParser.Return, 0)
        def expr(self):
            return self.getTypedRuleContext(MiniDecafParser.ExprContext,0)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniDecafParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Semicolon(self):
            return self.getToken(MiniDecafParser.Semicolon, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStmt" ):
                listener.enterContinueStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStmt" ):
                listener.exitContinueStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStmt" ):
                return visitor.visitContinueStmt(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = MiniDecafParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = MiniDecafParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(MiniDecafParser.Return)
                self.state = 108
                self.expr()
                self.state = 109
                self.match(MiniDecafParser.Semicolon)
                pass

            elif la_ == 2:
                localctx = MiniDecafParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.expr()
                self.state = 112
                self.match(MiniDecafParser.Semicolon)
                pass

            elif la_ == 3:
                localctx = MiniDecafParser.NullStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(MiniDecafParser.Semicolon)
                pass
